@@ -1,3 +1,4 @@
+07-june-2010 - mart0258 - Movie loading now faster - TAS savestates moved from class MovieRecord to class MovieData
 07-june-2010 - adelikat - Lua - new function: gui.screenshotas()
 07-june-2010 - Deign/adelikat - Win32 - Added a SavestateAs Menu item
 06-june-2010 - FatRatKnight - Added a return value to gui.text: The X position where the function would paint the next character.
